--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">La première tâche</string>
-    <string name="texto">Bienveniu</string>
+    <string name="texto">Bienvenue</string>
     <string name="boton">Entrer</string>
 
 </resources>
